{
  "version": 4,
  "terraform_version": "1.6.0",
  "serial": 114,
  "lineage": "38db8e47-116d-2b17-4dd6-f1f91efc5624",
  "resources": [
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:396383602106:vpc/vpc-08b316cba5fac8d41",
            "cidr_block": "10.100.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-03a789c735ba9c2aa",
                "cidr_block": "10.100.0.0/16",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-0b5a5bef1dc9f92bd",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "serve-uw2"
                ]
              }
            ],
            "id": "vpc-08b316cba5fac8d41",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-06e180a34b0e006b5",
            "owner_id": "396383602106",
            "tags": {
              "App": "serve",
              "Name": "serve-uw2",
              "Terraform": "true"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "serve_app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ce0152a3f6225d58",
            "arn": "arn:aws:ec2:us-west-2:396383602106:instance/i-0a7d15b82bf6d9576",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a7d15b82bf6d9576",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "aravn-mbp",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-02767692a2f5585d9",
            "private_dns": "ip-10-100-103-225.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.100.103.225",
            "public_dns": "ec2-52-41-90-135.us-west-2.compute.amazonaws.com",
            "public_ip": "52.41.90.135",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "tags_all": {
                  "App": "serve",
                  "Terraform": "true"
                },
                "throughput": 125,
                "volume_id": "vol-0f2fb47f1634237c0",
                "volume_size": 30,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-0549f047d86e3e036"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04444068354fd64e1",
            "tags": {
              "Name": "serve-app"
            },
            "tags_all": {
              "App": "serve",
              "Name": "serve-app",
              "Terraform": "true"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0549f047d86e3e036"
            ]
          },
          "dependencies": [
            "aws_security_group.serve_vm",
            "data.aws_subnets.public",
            "data.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "serve_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:396383602106:security-group/sg-0dd5cd65f860fa7ae",
            "description": "serve alb",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0dd5cd65f860fa7ae",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "serve-alb",
            "name_prefix": "",
            "owner_id": "396383602106",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {
              "App": "serve",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-08b316cba5fac8d41"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "serve_vm",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:396383602106:security-group/sg-0549f047d86e3e036",
            "description": "server app",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0549f047d86e3e036",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.100.0.0/16"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "76.131.61.220/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "76.131.61.220/32"
                ],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [
                  "76.131.61.220/32"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "76.131.61.220/32"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "serve",
            "name_prefix": "",
            "owner_id": "396383602106",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {
              "App": "serve",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-08b316cba5fac8d41"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "alb_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:396383602106:security-group-rule/sgr-05fa106b975510912",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-05fa106b975510912",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0dd5cd65f860fa7ae",
            "security_group_rule_id": "sgr-05fa106b975510912",
            "tags": null,
            "tags_all": {
              "App": "serve",
              "Terraform": "true"
            },
            "to_port": 80
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.serve_alb",
            "data.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "alb_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:396383602106:security-group-rule/sgr-025ce9e12878e9f01",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 443,
            "id": "sgr-025ce9e12878e9f01",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0dd5cd65f860fa7ae",
            "security_group_rule_id": "sgr-025ce9e12878e9f01",
            "tags": null,
            "tags_all": {
              "App": "serve",
              "Terraform": "true"
            },
            "to_port": 443
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.serve_alb",
            "data.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:396383602106:security-group-rule/sgr-0bd640188ac19e2d9",
            "cidr_ipv4": "10.100.0.0/16",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0bd640188ac19e2d9",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0549f047d86e3e036",
            "security_group_rule_id": "sgr-0bd640188ac19e2d9",
            "tags": null,
            "tags_all": {
              "App": "serve",
              "Terraform": "true"
            },
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.serve_vm",
            "data.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:396383602106:security-group-rule/sgr-021f3f9e2456e0dfa",
            "cidr_ipv4": "76.131.61.220/32",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-021f3f9e2456e0dfa",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0549f047d86e3e036",
            "security_group_rule_id": "sgr-021f3f9e2456e0dfa",
            "tags": null,
            "tags_all": {
              "App": "serve",
              "Terraform": "true"
            },
            "to_port": 80
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.serve_vm",
            "data.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:396383602106:security-group-rule/sgr-08dec38e9adc4e461",
            "cidr_ipv4": "76.131.61.220/32",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 443,
            "id": "sgr-08dec38e9adc4e461",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0549f047d86e3e036",
            "security_group_rule_id": "sgr-08dec38e9adc4e461",
            "tags": null,
            "tags_all": {
              "App": "serve",
              "Terraform": "true"
            },
            "to_port": 443
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.serve_vm",
            "data.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "nginx",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:396383602106:security-group-rule/sgr-0b765845b7640293b",
            "cidr_ipv4": "76.131.61.220/32",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 3000,
            "id": "sgr-0b765845b7640293b",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0549f047d86e3e036",
            "security_group_rule_id": "sgr-0b765845b7640293b",
            "tags": null,
            "tags_all": {
              "App": "serve",
              "Terraform": "true"
            },
            "to_port": 3000
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.serve_vm",
            "data.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:396383602106:security-group-rule/sgr-01847990dc60db943",
            "cidr_ipv4": "76.131.61.220/32",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-01847990dc60db943",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0549f047d86e3e036",
            "security_group_rule_id": "sgr-01847990dc60db943",
            "tags": null,
            "tags_all": {
              "App": "serve",
              "Terraform": "true"
            },
            "to_port": 22
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.serve_vm",
            "data.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-west-2:396383602106:loadbalancer/app/servev2/89c3d94389701b45",
            "arn_suffix": "app/servev2/89c3d94389701b45",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "servev2-229772023.us-west-2.elb.amazonaws.com",
            "drop_invalid_header_fields": true,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-west-2:396383602106:loadbalancer/app/servev2/89c3d94389701b45",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "servev2",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0dd5cd65f860fa7ae"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-04444068354fd64e1"
              },
              {
                "subnet_id": "subnet-05109a2189b2907ed"
              },
              {
                "subnet_id": "subnet-07ae728b5b257168c"
              }
            ],
            "subnets": [
              "subnet-04444068354fd64e1",
              "subnet-05109a2189b2907ed",
              "subnet-07ae728b5b257168c"
            ],
            "tags": {
              "terraform-aws-modules": "alb"
            },
            "tags_all": {
              "App": "serve",
              "Terraform": "true",
              "terraform-aws-modules": "alb"
            },
            "timeouts": {
            },
            "vpc_id": "vpc-08b316cba5fac8d41",
            "xff_header_processing_mode": "append",
            "zone_id": "Z1H1FL5HABSF5"
          },
          "dependencies": [
            "aws_security_group.serve_alb",
            "data.aws_subnets.public",
            "data.aws_vpc.this",
            "module.alb.aws_security_group.this"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "http-https-redirect",
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-west-2:396383602106:listener/app/servev2/89c3d94389701b45/89f9578810290074",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "#{host}",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:396383602106:listener/app/servev2/89c3d94389701b45/89f9578810290074",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-west-2:396383602106:loadbalancer/app/servev2/89c3d94389701b45",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": false,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {
              "terraform-aws-modules": "alb"
            },
            "tags_all": {
              "App": "serve",
              "Terraform": "true",
              "terraform-aws-modules": "alb"
            },
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.serve_alb",
            "data.aws_acm_certificate.serve",
            "data.aws_subnets.public",
            "data.aws_vpc.this",
            "module.alb.aws_lb.this",
            "module.alb.aws_lb_target_group.this",
            "module.alb.aws_security_group.this"
          ]
        },
        {
          "index_key": "https",
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-west-2:396383602106:listener/app/servev2/89c3d94389701b45/78a045a72ec61809",
            "certificate_arn": "arn:aws:acm:us-west-2:396383602106:certificate/8a332446-29e9-4d96-8fc4-cbe0cc76b64a",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:396383602106:targetgroup/tf-20250418164631776500000001/7618c59583544cc3",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:396383602106:listener/app/servev2/89c3d94389701b45/78a045a72ec61809",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-west-2:396383602106:loadbalancer/app/servev2/89c3d94389701b45",
            "mutual_authentication": [
              {
                "advertise_trust_store_ca_names": "",
                "ignore_client_certificate_expiry": false,
                "mode": "off",
                "trust_store_arn": ""
              }
            ],
            "port": 443,
            "protocol": "HTTPS",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": "",
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": "",
            "routing_http_request_x_amzn_tls_version_header_name": "",
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": false,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "ELBSecurityPolicy-TLS13-1-2-2021-06",
            "tags": {
              "terraform-aws-modules": "alb"
            },
            "tags_all": {
              "App": "serve",
              "Terraform": "true",
              "terraform-aws-modules": "alb"
            },
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.serve_alb",
            "data.aws_acm_certificate.serve",
            "data.aws_subnets.public",
            "data.aws_vpc.this",
            "module.alb.aws_lb.this",
            "module.alb.aws_lb_target_group.this",
            "module.alb.aws_security_group.this"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "https/api",
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:396383602106:targetgroup/tf-20250418164631776500000002/5d2df3e20b649384",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-west-2:396383602106:listener-rule/app/servev2/89c3d94389701b45/78a045a72ec61809/312c5e5eec11fb5a",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/api/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:396383602106:listener-rule/app/servev2/89c3d94389701b45/78a045a72ec61809/312c5e5eec11fb5a",
            "listener_arn": "arn:aws:elasticloadbalancing:us-west-2:396383602106:listener/app/servev2/89c3d94389701b45/78a045a72ec61809",
            "priority": 10,
            "tags": {
              "Name": "api",
              "terraform-aws-modules": "alb"
            },
            "tags_all": {
              "App": "serve",
              "Name": "api",
              "Terraform": "true",
              "terraform-aws-modules": "alb"
            }
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.serve_alb",
            "data.aws_acm_certificate.serve",
            "data.aws_subnets.public",
            "data.aws_vpc.this",
            "module.alb.aws_lb.this",
            "module.alb.aws_lb_listener.this",
            "module.alb.aws_lb_target_group.this",
            "module.alb.aws_security_group.this"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "serve-api",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:396383602106:targetgroup/tf-20250418164631776500000002/5d2df3e20b649384",
            "arn_suffix": "targetgroup/tf-20250418164631776500000002/5d2df3e20b649384",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "404",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:396383602106:targetgroup/tf-20250418164631776500000002/5d2df3e20b649384",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-west-2:396383602106:loadbalancer/app/servev2/89c3d94389701b45"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "tf-20250418164631776500000002",
            "name_prefix": "tf-",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "terraform-aws-modules": "alb"
            },
            "tags_all": {
              "App": "serve",
              "Terraform": "true",
              "terraform-aws-modules": "alb"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-08b316cba5fac8d41"
          },
          "dependencies": [
            "data.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "serve-fe",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:396383602106:targetgroup/tf-20250418164631776500000001/7618c59583544cc3",
            "arn_suffix": "targetgroup/tf-20250418164631776500000001/7618c59583544cc3",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:396383602106:targetgroup/tf-20250418164631776500000001/7618c59583544cc3",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-west-2:396383602106:loadbalancer/app/servev2/89c3d94389701b45"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "tf-20250418164631776500000001",
            "name_prefix": "tf-",
            "port": 3000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "terraform-aws-modules": "alb"
            },
            "tags_all": {
              "App": "serve",
              "Terraform": "true",
              "terraform-aws-modules": "alb"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-08b316cba5fac8d41"
          },
          "dependencies": [
            "data.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "serve-api",
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-west-2:396383602106:targetgroup/tf-20250418164631776500000002/5d2df3e20b649384-20250418164633047700000003",
            "port": 8080,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:396383602106:targetgroup/tf-20250418164631776500000002/5d2df3e20b649384",
            "target_id": "i-0c1267556bad83229"
          },
          "dependencies": [
            "data.aws_vpc.this",
            "module.alb.aws_lambda_permission.this",
            "module.alb.aws_lb_target_group.this",
            "module.alb.data.aws_partition.current"
          ]
        },
        {
          "index_key": "serve-fe",
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-west-2:396383602106:targetgroup/tf-20250418164631776500000001/7618c59583544cc3-20250418164633079100000004",
            "port": 3000,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:396383602106:targetgroup/tf-20250418164631776500000001/7618c59583544cc3",
            "target_id": "i-0c1267556bad83229"
          },
          "dependencies": [
            "data.aws_vpc.this",
            "module.alb.aws_lambda_permission.this",
            "module.alb.aws_lb_target_group.this",
            "module.alb.data.aws_partition.current"
          ]
        }
      ]
    }
  ]
}